deps/v8/test/message/import-as-redeclaration.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:8: SyntaxError: Identifier 'foo' has already been declared
import { bar as foo } from "mod";
                ^^^
SyntaxError: Identifier 'foo' has already been declared
